--- a/app/src/main/res/layout/fragment_spin.xml
+++ b/app/src/main/res/layout/fragment_spin.xml
@@ -38,12 +38,15 @@
 
             </FrameLayout>
 
-            <Button
+            <TextView
                 android:id="@+id/rotate_btn1"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_20dp"
-                android:background="@drawable/btn_bg"
+                android:textAlignment="center"
+                android:paddingTop="@dimen/dimen_8dp"
+                android:textStyle="bold"
+                android:background="@drawable/button_bg"
                 android:text="@string/rotate_btn_txt"
                 android:textColor="@color/white" />
 
@@ -74,12 +77,15 @@
 
             </FrameLayout>
 
-            <Button
+            <TextView
                 android:id="@+id/rotate_btn2"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_20dp"
-                android:background="@drawable/btn_bg"
+                android:textAlignment="center"
+                android:paddingTop="@dimen/dimen_8dp"
+                android:textStyle="bold"
+                android:background="@drawable/button_bg"
                 android:text="@string/rotate_btn_txt"
                 android:textColor="@color/white" />
 
@@ -110,12 +116,15 @@
 
             </FrameLayout>
 
-            <Button
+            <TextView
                 android:id="@+id/rotate_btn3"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_20dp"
-                android:background="@drawable/btn_bg"
+                android:textAlignment="center"
+                android:paddingTop="@dimen/dimen_8dp"
+                android:textStyle="bold"
+                android:background="@drawable/button_bg"
                 android:text="@string/rotate_btn_txt"
                 android:textColor="@color/white" />
 
