--- a/app/src/main/res/layout/slot_image_scrolling.xml
+++ b/app/src/main/res/layout/slot_image_scrolling.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/dimen_8dp">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/current_image"
-        android:layout_width="100dp"
-        android:layout_height="120dp"
-        android:src="@drawable/slot_image1"
-        android:background="@color/white"/>
+        android:layout_width="110dp"
+        android:layout_height="130dp"
+        android:src="@drawable/slot_image1"/>
 
     <ImageView
         android:id="@+id/next_image"
-        android:layout_width="100dp"
-        android:layout_height="120dp"
-        android:background="@color/white"/>
+        android:layout_width="110dp"
+        android:layout_height="130dp"
+        android:src="@drawable/slot_image2"/>
 
 </FrameLayout>
