--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/bg_blue"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".Gui.Register.LoginActivity">
+    tools:context=".Gui.Login.LoginActivity">
 
 
     <LinearLayout
