--- a/app/src/main/res/layout/fragment_spin.xml
+++ b/app/src/main/res/layout/fragment_spin.xml
@@ -40,15 +40,8 @@
 
             <TextView
                 android:id="@+id/rotate_btn1"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_20dp"
-                android:textAlignment="center"
-                android:paddingTop="@dimen/dimen_24dp"
-                android:textStyle="bold"
-                android:background="@drawable/button_bg"
-                android:text="@string/rotate_btn_txt"
-                android:textColor="@color/white" />
+                style="@style/PlayButtonStyle"
+                android:text="@string/rotate_btn_txt"/>
 
         </LinearLayout>
 
@@ -79,15 +72,8 @@
 
             <TextView
                 android:id="@+id/rotate_btn2"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_20dp"
-                android:textAlignment="center"
-                android:paddingTop="@dimen/dimen_8dp"
-                android:textStyle="bold"
-                android:background="@drawable/button_bg"
-                android:text="@string/rotate_btn_txt"
-                android:textColor="@color/white" />
+                style="@style/PlayButtonStyle"
+                android:text="@string/rotate_btn_txt"/>
 
         </LinearLayout>
 
@@ -118,15 +104,8 @@
 
             <TextView
                 android:id="@+id/rotate_btn3"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_20dp"
-                android:textAlignment="center"
-                android:paddingTop="@dimen/dimen_8dp"
-                android:textStyle="bold"
-                android:background="@drawable/button_bg"
-                android:text="@string/rotate_btn_txt"
-                android:textColor="@color/white" />
+                style="@style/PlayButtonStyle"
+                android:text="@string/rotate_btn_txt"/>
 
         </LinearLayout>
 
@@ -158,7 +137,6 @@
             android:layout_width="@dimen/dimen_40dp"
             android:layout_height="@dimen/dimen_40dp"
             android:src="@drawable/wheel_icon3"/>
-
 
     </LinearLayout>
 
