--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,16 @@
         <item name="android:layout_marginStart">50dp</item>
     </style>
 
+    <style name="PlayButtonStyle">
+        <item name="android:layout_width">250dp</item>
+        <item name="android:layout_height">70dp</item>
+        <item name="android:layout_marginTop">@dimen/dimen_20dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:paddingTop">@dimen/dimen_12dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/button_bg</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
