--- a/app/src/main/res/layout/fragment_dice.xml
+++ b/app/src/main/res/layout/fragment_dice.xml
@@ -6,16 +6,72 @@
     android:background="#0FFF"
     android:gravity="center"
     android:orientation="vertical"
+    android:paddingHorizontal="20dp"
     tools:context=".Gui.Dice.DiceFragment">
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="250dp"
-        android:src="@drawable/dice1"/>
+    <ViewFlipper
+        android:id="@+id/dice_view_flipper"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ImageView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/first_dice1"
+                android:layout_width="120dp"
+                android:layout_height="150dp"
+                android:layout_gravity="right"
+                android:layout_marginEnd="@dimen/dimen_20dp"
+                android:src="@drawable/dice1" />
+
+            <ImageView
+                android:id="@+id/second_dice1"
+                android:layout_width="120dp"
+                android:layout_height="150dp"
+                android:layout_gravity="left"
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:src="@drawable/dice4" />
+
+            <TextView
+                android:id="@+id/dice_btn1"
+                style="@style/PlayButtonStyle"
+                android:text="Roll" />
+
+        </LinearLayout>
+
+    </ViewFlipper>
+
+    <LinearLayout
         android:layout_width="200dp"
-        android:layout_height="250dp"
-        android:src="@drawable/dice4"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_20dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/dice_icon1"
+            android:layout_width="@dimen/dimen_40dp"
+            android:layout_height="@dimen/dimen_40dp"
+            android:layout_marginEnd="@dimen/dimen_16dp"
+            android:src="@drawable/dice_icon1"/>
+
+        <ImageView
+            android:id="@+id/dice_icon2"
+            android:layout_width="@dimen/dimen_40dp"
+            android:layout_height="@dimen/dimen_40dp"
+            android:layout_marginEnd="@dimen/dimen_16dp"
+            android:src="@drawable/dice_icon2"/>
+
+        <ImageView
+            android:id="@+id/dice_icon3"
+            android:layout_width="@dimen/dimen_40dp"
+            android:layout_height="@dimen/dimen_40dp"
+            android:src="@drawable/dice_icon3"/>
+
+    </LinearLayout>
 
 </LinearLayout>
