--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -37,6 +37,7 @@
                 android:inputType="textCapWords"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:textAlignment="viewStart"
                 android:hint="Name" />
 
         </RelativeLayout>
@@ -62,6 +63,7 @@
                 android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:textAlignment="viewStart"
                 android:hint="Email" />
 
         </RelativeLayout>
@@ -87,6 +89,7 @@
                 android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:textAlignment="viewStart"
                 android:hint="Password" />
 
         </RelativeLayout>
@@ -112,6 +115,7 @@
                 android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:textAlignment="viewStart"
                 android:hint="Confirm Password" />
 
         </RelativeLayout>
@@ -137,6 +141,7 @@
                 android:inputType="phone"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:textAlignment="viewStart"
                 android:hint="Phone" />
 
         </RelativeLayout>
@@ -153,7 +158,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:src="@drawable/world_icon" />
 
             <EditText
@@ -162,6 +167,7 @@
                 android:inputType="textCapWords"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:textAlignment="viewStart"
                 android:hint="Country" />
 
         </RelativeLayout>
