--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,7 @@
                 style="@style/EditTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:hint="Email"
+                android:hint="@string/email_hint"
                 android:inputType="textEmailAddress"
                 android:text="hassan@hotmail.com"
                 android:textAlignment="viewStart" />
@@ -58,23 +58,23 @@
             android:layout_marginEnd="30dp"
             android:background="@drawable/edittext_bg">
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="15dp"
-                android:src="@drawable/pw_icon" />
-
             <EditText
                 android:id="@+id/login_password_ET"
                 style="@style/EditTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_alignParentEnd="true"
-                android:hint="Password"
+                android:hint="@string/password_hint"
                 android:inputType="textPassword"
-                android:text="hassan123"
-                android:textAlignment="viewStart" />
+                android:textAlignment="textStart"
+                android:text="hassan123" />
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="15dp"
+                android:src="@drawable/pw_icon" />
 
         </RelativeLayout>
 
@@ -92,7 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_20dp"
-            android:text="Don't have an account ? Create one"
+            android:text="@string/don_t_have_account_tx"
             android:textColor="@color/white" />
 
         <LinearLayout
