--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,15 @@
         <item name="android:layout_marginStart">50dp</item>
     </style>
 
+    <style name="EditTextArabicStyle">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textColorHint">@color/colorAccent</item>
+        <item name="android:background">@null</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:paddingLeft">@dimen/dimen_20dp</item>
+    </style>
+
     <style name="PlayButtonStyle">
         <item name="android:layout_width">250dp</item>
         <item name="android:layout_height">70dp</item>
