--- a/app/src/main/res/layout/fragment_spin.xml
+++ b/app/src/main/res/layout/fragment_spin.xml
@@ -6,7 +6,7 @@
     android:background="#0FFF"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".Gui.SpinFragment">
+    tools:context=".Gui.Spin.SpinFragment">
 
     <ViewFlipper
         android:id="@+id/spin_view_flipper"
