--- a/app/src/main/res/layout/slot_image_scrolling.xml
+++ b/app/src/main/res/layout/slot_image_scrolling.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/current_image"
-        android:layout_width="120dp"
+        android:layout_width="110dp"
         android:layout_height="130dp"
         android:src="@drawable/slot_image1"/>
 
     <ImageView
         android:id="@+id/next_image"
-        android:layout_width="120dp"
+        android:layout_width="110dp"
         android:layout_height="130dp"
         android:src="@drawable/slot_image4"/>
 
