--- a/app/src/main/res/layout-ar/activity_create_account.xml
+++ b/app/src/main/res/layout-ar/activity_create_account.xml
@@ -172,7 +172,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_20dp"
             android:background="@drawable/btn_bg"
-            android:text="Create Account"
+            android:text="@string/create_account_btn"
             android:textColor="@color/white" />
 
         <!--<com.google.android.gms.common.SignInButton
