--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,10 +31,28 @@
         <item name="android:textAlignment">center</item>
         <item name="android:textSize">24sp</item>
         <item name="android:paddingTop">@dimen/dimen_12dp</item>
-
         <item name="android:background">@drawable/button_bg</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/carterone</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="AlertDialogCustom" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:layoutDirection">rtl</item>
+        <item name="buttonBarNegativeButtonStyle">@style/AlertDialogNegative</item>
+        <item name="buttonBarPositiveButtonStyle">@style/AlertDialogPositive</item>
+    </style>
+
+    <style name="AlertDialogNegative">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:background">@null</item>
+        <item name="android:layout_gravity">left</item>
+    </style>
+
+    <style name="AlertDialogPositive">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:background">@null</item>
+        <item name="android:layout_gravity">left</item>
     </style>
 
 </resources>
